# app_bin

./: .gitignore  Cargo.toml  README.md  asdasd  build.sh  build_back copy.sh
app_bin/: Cargo.toml
app_bin/src/: main.rs
app_bin/src/components/: layout.rs  mod.rs  speed_layout.rs
app_bin/src/contents/: car_adapter.rs  car_page.rs  gps_adapter.rs  gps_page.rs  lte_adapter.rs  lte_page.rs  main_page.rs  mod.rs  rf_page.rs
app_bin/src/contents/gps_sub_page/: gps_info.rs  mod.rs
app_bin/src/contents/lte_sub_page/: mod copy 2.rs  mod copy.rs  mod.rs  net_data.rs  sms_data copy.rs  sms_data.rs  tracing.rs
app_lib/: Cargo.toml
app_lib/src/: lib.rs
app_lib/src/ctr_mod/: board_ctl.rs  gps_ctr.rs  lte_ctr copy 3.rs  lte_ctr copy 5.rs  lte_ctr copy.rs  lte_ctr.rs  mod.rs
app_lib/src/ctr_mod/lte_ctr/lte_cmd/: mod.rs
backup_code/: gps_ctr.rs  lte_ctr copy 4.rs  mod.rs  net_data.rs  sms_data.rs
ras_file/: 99-fix-lte-route.sh  app_bin.service
