[workspace]
members = ["app_bin"
, "app_lib"] 
default-members = ["app_bin"]
resolver="2"

[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["yum <yumzi114@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"


[workspace.dependencies]
eframe = "0.32.0"
tokio = { version = "1.47.0", features = ["full"] }
defaults = "0.2.0"
chrono = "0.4.41"

