[package]
name = "app_lib"


version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

[dependencies]
tokio = { workspace = true }
defaults = { workspace = true }
tokio-serial = "5.4.5"
bytes = "1.10.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
futures-util = "0.3.31"
crossbeam-channel = "0.5.15"
chrono = { workspace = true }
ublox = { version = "0.5.0", features = ["serde", "std", "ubx_proto27"], default-features = false }
nmea = "0.7.0"
gpio-cdev = "0.6.0"
better_default = { workspace = true }
regex = { workspace = true }



